cssblog.css
.text-logo {
	color: black;
}

body{
	background-color: #f3a61f;
	font-family: "Trebuchet MS", Helvetica, sans-serif;

}

.container{
	background-color: white;
}

header{
	
	background-image: url("https://wildcodeschool.fr/wp-content/uploads/2017/01/logo_orange_pastille.png");
	background-repeat: no-repeat;
	background-position: center;


}

.modal-header{
	background-color: white;
}

h1{
	color: white;
	margin-bottom: 7%;
	margin-top: 7%;
	text-shadow: 2px 2px black;
	font-family: "Trebuchet MS", Helvetica, sans-serif;
	font-size: 55px;

}

 .introduction {
  	margin-top: 7%;
  }

.btn-primary {
	color: white;
	background-color: orange;
	border: none;
}


/*smartphone + tablette portrait*/
@media (max-width: 576px) {

	header{
		position: fixed !important;
		z-index: 2;
	}

	.introduction{
		margin-top: 30% !important;
		z-index: 1;
	}
	.billet{
		z-index: 1;
	}

	h1{
	color: white;
	margin-bottom: 7%;
	margin-top: 7%;
	text-shadow: 2px 2px black;
	font-family: "Trebuchet MS", Helvetica, sans-serif;
	font-size: 30px;

}

	
}

/*tablette paysage + 720p*/
@media (min-width: 992px) {
  .lien-wcs {
  position: fixed; 
  left: 73%;
  top: 20%; 
  display: flex;
  flex-direction: column;
  width: 30%;
    }

  .billet{
		width: 102%;
	}

  .btn-primary:hover {
	color: white;
	background-color: #5ac3af;
    }

}





/*1080p*/

@media (min-width: 1900px) {
	.lien-wcs {
   position: fixed; 
   left: 71%;
   top: 20%; 
   display: flex;
   flex-direction: column;
   width: 20%;
  } 
  .billet{
		width: 119%;
	}
	.btn-primary:hover {
	color: white;
	background-color: #5ac3af;
	}
}

a[class*="list-group-item-action"]{
	background-color: #5ac3af;
	color: white;
	font-weight: bold;
}

